--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=bb9a19ab12ab00b80f8fbbbef995cc92"></script>
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=029e7fa4eeb00b1ec2cdbc0ca619d906"></script>
     <title>마이 날씨</title>
     <style>
         *{margin: 0 auto; padding:0;
@@ -71,6 +71,7 @@
         body{
             background:url('https://i.imgur.com/u09ZI1x.jpg');
             background-size:cover;
+            height:100vh;
         }
     </style>
 </head>
